--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import insta from "../assets/icons/insta.svg";
 import twitter from "../assets/icons/twitter.svg";
 import youtube from "../assets/icons/youtube.svg";
 import About from "../components/About.astro";
+import Community from "../components/Community.astro";
 ---
 
 <Layout title="Rocketseat old website">
@@ -56,4 +57,6 @@ import About from "../components/About.astro";
   </header>
   <Hero></Hero>
   <About></About>
+  <Community></Community>
+  <Community></Community>
 </Layout>
