--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -26,7 +26,7 @@ import AboutImg from "../assets/about-img.svg";
       </p>
 
       <a class="text-rocketseat bg-white py-2 px-3 uppercase rounded-full mt-4 inline-block font-semibold" href="#">
-        Acessar a comunidade
+        Acessar treinamentos
       </a>
     </div>
   </div>
