blog/card section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import twitter from "../assets/icons/twitter.svg";
 import youtube from "../assets/icons/youtube.svg";
 import About from "../components/About.astro";
 import Community from "../components/Community.astro";
+import Blog from "../components/Blog.astro";
 ---
 
 <Layout title="Rocketseat old website">
@@ -55,8 +56,8 @@ import Community from "../components/Community.astro";
       </nav>
     </div>
   </header>
-  <Hero></Hero>
-  <About></About>
-  <Community></Community>
-  <Community></Community>
+  <Hero/>
+  <About/>
+  <Community/>
+  <Blog/>
 </Layout>
