newsletter section/add footer index/remove React/update REAME

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import youtube from "../assets/icons/youtube.svg";
 import About from "../components/About.astro";
 import Community from "../components/Community.astro";
 import Blog from "../components/Blog.astro";
+import Newsletter from "../components/Newsletter.astro";
 ---
 
 <Layout title="Rocketseat old website">
@@ -60,4 +61,8 @@ import Blog from "../components/Blog.astro";
   <About/>
   <Community/>
   <Blog/>
+  <Newsletter />
+  <footer class="font-semibold text-sm text-stone-500 py-6 md:py-8 text-center">
+    © 2018 - Rocketseat
+  </footer>
 </Layout>
