--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 const { title, excerpt, src } = Astro.props;
 ---
 
-<div class="w-[20rem] md:w-1/3 shrink-0 md:shrink">
+<article class="w-[20rem] md:w-1/3 shrink-0 md:shrink">
   <Image class="object-cover" src={src} alt="" />
   <h3 class="text-rocketseat font-bold text-xl mt-4">{title}</h3>
   <p class="text-gray-400 mt-2">{excerpt}</p>
@@ -19,4 +19,4 @@ const { title, excerpt, src } = Astro.props;
     <small class="text-sm text-gray-500">Student @Rocketseat</small>
 	</div>
   </footer>
-</div>
+</article>
