remove Astro Image component

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,5 @@
 ---
-import { Image } from "astro:assets";
-import HeroImage from "../assets/hero-img.svg"
+import Heroimg from "../assets/hero-img.svg"
 ---
 
 <section class="mt-12 px-5">
@@ -12,7 +11,7 @@ import HeroImage from "../assets/hero-img.svg"
             </p>
         </div>
         <div>
-            <Image src={HeroImage} alt="" />
+            <img src={Heroimg.src} alt="" />
         </div>
     </div>
 </section>
