--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -1,5 +1,4 @@
 ---
-import { Image } from "astro:assets";
 import NewsletterImg from "../assets/newsletter-img.svg";
 ---
 
@@ -9,9 +8,9 @@ import NewsletterImg from "../assets/newsletter-img.svg";
   <div
     class="md:max-1-[53.75rem] md:mx-auto md:flex gap-10 items-center justify-center"
   >
-    <Image
+    <img
       class="opacity-20 absolute -bottom-[2.2rem] -translate-x-1/2 left-1/2 md:static md:translate-x-0 md:opacity-100"
-      src={NewsletterImg}
+      src={NewsletterImg.src}
       alt=""
     />
 
