--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -1,9 +1,9 @@
 ---
 import Card from "./Card.astro";
 
-import Image1 from "../assets/1.jpg";
-import Image2 from "../assets/2.jpg";
-import Image3 from "../assets/3.jpg";
+import img1 from "../assets/1.jpg";
+import img2 from "../assets/2.jpg";
+import img3 from "../assets/3.jpg";
 ---
 
 <section
@@ -13,17 +13,17 @@ import Image3 from "../assets/3.jpg";
     <Card
       title="PWA: O que é? Vale a pena? Quando utilizar?"
       excerpt="Iniciando com controle de versão com Git e Github de forma prática"
-      src={Image1}
+      src={img1.src}
     />
     <Card
       title="5 dicas de performance no React Native"
       excerpt="Conheça algumas estratégias para melhorar a performance dos…"
-      src={Image2}
+      src={img2.src}
     />
     <Card
       title="Expo: o que é, para que serve e quando utilizar?"
       excerpt="Aprender React Native com Expo ou iniciar sem ele?"
-      src={Image3}
+      src={img3.src}
     />
   </div>
 </section>
