--- a/src/components/Community.astro
+++ b/src/components/Community.astro
@@ -1,11 +1,10 @@
 ---
-import { Image } from "astro:assets";
 import CommunityImg from "../assets/community-img.svg"
 ---
 
 <section class="pt-12 md:pt-16">
   <div class="border-b border-b-slate-200 flex flex-col md:flex-row text-center md:text-left items-center gap-12 z-10 max-w-[53.75rem] mx-auto pb-12 md:pb-20">
-    <Image src={CommunityImg} alt="" />
+    <img src={CommunityImg.src} alt="" />
 
     <div class="max-w-[31.25rem]">
       <h2 class="text-3xl text-rocketseat leading-10 font-bold">
