--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
-import { Image } from "astro:assets";
 
 import logo from "../assets/logo.svg";
 import face from "../assets/icons/face.svg";
@@ -19,7 +18,7 @@ import Newsletter from "../components/Newsletter.astro";
     <div class="max-w-[64rem] mx-auto p-5">
       <nav class="flex items-center">
         <a href="#" class="flex items-center gap-7 mr-7">
-          <Image src={logo} alt="" />
+          <img src={logo.src} alt="" />
           <div class="w-px bg-white/50 h-6"></div>
         </a>
 
@@ -41,17 +40,17 @@ import Newsletter from "../components/Newsletter.astro";
         <ul class="hidden md:flex items-center gap-4 ml-auto">
           <li class="w-5 h-5 flex items-center justify-center">
             <a href="#">
-              <Image src={face} alt="" />
+              <img src={face.src} alt="" />
             </a>
           </li>
           <li>
-            <a href="#"><Image src={insta} alt="" /></a>
+            <a href="#"><img src={insta.src} alt="" /></a>
           </li>
           <li>
-            <a href="#"><Image src={twitter} alt="" /></a>
+            <a href="#"><img src={twitter.src} alt="" /></a>
           </li>
           <li>
-            <a href="#"><Image src={youtube} alt="" /></a>
+            <a href="#"><img src={youtube.src} alt="" /></a>
           </li>
         </ul>
       </nav>
