fix input newsletter

--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -23,7 +23,7 @@ import NewsletterImg from "../assets/newsletter-img.svg";
       </p>
       <div class="bg-white mt-5 p-3 rounded-md flex items-center max-w-[21.35rem] mx-auto">
         <input
-          class="placeholder:text-gray-400"
+          class="placeholder:text-gray-400 w-full"
           type="text"
           placeholder="Digite seu melhor e-mail"
         />
